# LABA22

./: CMakeLists.txt
Google_tests/: CMakeLists.txt
Task_1/: Task_1.cpp  main
Task_10/: Task_10.cpp
Task_11/: Task_11.cpp
Task_13/: Task_13.cpp
Task_2/: Task_2.cpp
Task_3/: Task_3.cpp
Task_4/: Task_4.cpp  test4
Task_7/: Task_7.cpp
Task_8/: 1.txt  2.txt  3.txt  4.txt  5.txt  Task_8.cpp
Task_9/: Task_9.cpp
